--- a/style.css
+++ b/style.css
@@ -1,18 +1,51 @@
+* {
+    border: 1px solid;
+    font-family: Calibri, sans-serif;
+    width: available;
+    height: auto;
+    margin: 5px;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: auto;
+}
+
 html {
     box-sizing: border-box;
+    width: 100%;
     height: 100%;
+    margin: 0;
 }
 
 body {
     background: linear-gradient(320deg, #eb92be, #ffef78);
-    display: flex;
-    font-family: Calibri, sans-serif;
     height: inherit;
-    align-items: center;
-    justify-content: center;
+    margin: 0;
 }
 
 img {
     max-width: 100%;
     max-height: 100%;
+}
+
+#header {
+
+}
+
+#container {
+
+}
+
+#footer {
+
+}
+
+.book_row {
+    display: flex;
+}
+
+.book {
+    width: available;
+    flex-basis: 20%;
 }
